app/assets/stylesheets/forms.css.sass
.validation-summary,
.validation-error
  padding: 1em
  border: 3px solid #df3034
  background: #fef7f7

.validation-summary
  margin-bottom: 1em
  & :first-child
    margin-top: 0
  & :last-child
    margin-bottom: 0

.validation-error
  border-width: 0 0 0 3px

.validation-message
  display: block
  color: #df3034


form
  .group
    margin: 1em 0

  .group--inline
    label
      float: left
      width: 12.5em

label
  @include core-19
  display: block

input,
select
  @include core-16
  margin: 0

  &[type=text],
  &[type=email],
  &[type=tel],
  &[type=date]
    width: 250px
    padding: 5px 4px 2px
    color: $black
    border: 1px solid $grey-2

select
  border-color: $grey-2

.button
  font-size: 19px

.actions
  margin: 1em 0
  padding-top: 1em

  @include media(desktop)
    clear: both

  p
    margin-top: .263em
    text-align: right

    @include media(false, 768px)
      margin-top: 2em
      text-align: left

.primary-actions
  float: left

  @include media(false, 768px)
    float: none

.FormBlock
  padding: 1em 90px
  border:
    color: $grey-2
    style: solid
    width: 1px 0
  background: $grey-4

  @include media(mobile)
    padding: .5em 30px

